feat: wrappers around index buffer object

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ target_sources(d-test PRIVATE
     d-engine/core/os/window/WindowProperties.c
     d-engine/core/os/window/Window.c
     d-engine/core/gfx/VertexBuffer.c
+    d-engine/core/gfx/IndexBuffer.c
     vendor/glad/src/glad.c
 )
 
