--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ target_sources(app PRIVATE
     d-engine/core/gfx/IndexBuffer.c
     d-engine/core/gfx/VertexArrayObject.c
     d-engine/core/gfx/Shader.c
+    d-engine/core/gfx/Renderer.c
     d-engine/core/debug/debug.h
     vendor/glad/src/glad.c
     vendor/log.c/src/log.c
