chore: change directory names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,13 +39,13 @@ endif()
 
 target_sources(app PRIVATE
     main.c
-    d-engine/core/os/window/WindowProperties.c
-    d-engine/core/os/window/Window.c
-    d-engine/core/gfx/VertexArray.c
-    d-engine/core/gfx/Shader.c
-    d-engine/core/gfx/Renderer.c
-    d-engine/core/application/Application.c
-    d-engine/core/log/log.c
+    d-engine/Core/os/Window/WindowProperties.c
+    d-engine/Core/OS/Window/Window.c
+    d-engine/Core/GFX/VertexArray.c
+    d-engine/Core/GFX/Shader.c
+    d-engine/Core/GFX/Renderer.c
+    d-engine/Core/Application/Application.c
+    d-engine/Core/Log/log.c
     vendor/glad/src/glad.c
     vendor/log.c/src/log.c
 )
